--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -561,6 +561,12 @@ plugin_attr:
     #  bandwidth:
     #    extra_labels:
     #      - upstream_addr: $upstream_addr
+    # default_buckets:
+    #   - 10
+    #   - 50
+    #   - 100
+    #   - 200
+    #   - 500
   server-info:
     report_ttl: 60   # live time for server info in etcd (unit: second)
   dubbo-proxy:
