--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -107,11 +107,14 @@ apisix:
                                 # Disabled by default because it renders Perfect Forward Secrecy (FPS)
                                 # useless. See https://github.com/mozilla/server-side-tls/issues/135.
 
-    key_encrypt_salt:           # Salt for SSL/TLS private key used with AES-128-CBC.
-      - edd1c9f0985e76a2        # Each salt value should be a hexadecimal string of length 16.
-                                # Support multiple salt values for rotation.
-                                # CAUTION: DO NOT MODIFY SALT VALUE AFTER KEY IS WRITTEN TO ETCD.
-                                # VALUES CANNOT BE DECRYPTED OTHERWISE.
+    key_encrypt_salt:           # Set the encryption key for AES-128-CBC. It should be a  
+      - edd1c9f0985e76a2        # hexadecimal string of length 16.
+                                # For the convenience of key replacement, key_encrypt_salt 
+                                # supports the use of multiple keys. The additional keys are 
+                                # used in sequential order for decryption, when the previous 
+                                # decryption attempt fails.
+                                # CAUTION: DO NOT MODIFY SALT VALUE AFTER DATA HAS BEEN WRITTEN 
+                                # TO ETCD. IT CAN RENDER THE ENCRYPTED DATA UNRECOVERABLE.
 
     # fallback_sni: "my.default.domain"      # Fallback SNI to be used if the client does not send SNI during
     #                                        # the handshake.
@@ -126,10 +129,13 @@ apisix:
   data_encryption:                # Encrypt fields specified in `encrypt_fields` in plugin schema.
     enable: false
     keyring:
-      - qeddd145sfvddff3          # Salt for other fields encrypted with AES-128-CBC.
-                                  # Each salt value should be a hexadecimal string of length 16.
-                                  # Support multiple salt values for rotation.
-                                  # CAUTION: DO NOT MODIFY SALT VALUE AFTER CONFIGURATIONS ARE WRITTEN INTO ETCD. VALUES CANNOT BE DECRYPTED OTHERWISE.
+      - qeddd145sfvddff3         # hexadecimal string of length 16.
+                                 # For the convenience of key replacement, keyring 
+                                 # supports the use of multiple keys. The additional keys are 
+                                 # used in sequential order for decryption, when the previous 
+                                 # decryption attempt fails.
+                                 # CAUTION: DO NOT MODIFY SALT VALUE AFTER DATA HAS BEEN WRITTEN 
+                                 # TO ETCD. IT CAN RENDER THE ENCRYPTED DATA UNRECOVERABLE.
 
 nginx_config:                     # config for render the template to generate nginx.conf
   #user: root                     # specifies the execution user of the worker process.
