--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -24,11 +24,11 @@ apisix:
     - 9080
     # - port: 9081
     #   enable_http2: true     # If not set, default to `false`.
-    # - ip: 127.0.0.2          # If not set, default to `0.0.0.0`/
+    # - ip: 127.0.0.2          # If not set, default to `0.0.0.0`
     #   port: 9082
     #   enable_http2: true
   enable_admin: true           # Admin API
-  enable_dev_mode: false       # If true, set nginx worker_processes to 1.
+  enable_dev_mode: false       # If true, set nginx `worker_processes` to 1.
   enable_reuseport: true       # If true, enable nginx SO_REUSEPORT option.
   show_upstream_status_in_response_header: false  # If true, include the upstream HTTP status code in
                                                   # the response header `X-APISIX-Upstream-Status`.
