Update link-check.yml for trigger check-link

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -10,10 +10,12 @@ on:
     branches: [master, 'release/**']
     paths:
       - '**/*.md'
+      - '.github/workflows/link-check.yml'
   pull_request:
     branches: [master, "release/**"]
     paths:
       - '**/*.md'
+      - '.github/workflows/link-check.yml'
 
 permissions:
   contents: read
