--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -10,12 +10,12 @@ on:
     branches: [master, 'release/**']
     paths:
       - '**/*.md'
-      - '.github/workflows/link-check.yml'
+      - '**/link-check.yml'
   pull_request:
     branches: [master, "release/**"]
     paths:
       - '**/*.md'
-      - '.github/workflows/link-check.yml'
+      - '**/link-check.yml'
 
 permissions:
   contents: read
