--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -93,7 +93,7 @@ apisix:
   #dns_resolver:                  # If not set, read from `/etc/resolv.conf`
   #  - 1.1.1.1
   #  - 8.8.8.8
-  #dns_resolver_valid: 30         # if given, override the TTL of the valid records. The unit issond.
+  #dns_resolver_valid: 30         # if given, override the TTL of the valid records. The unit is second.
   resolver_timeout: 5             # resolver timeout
   enable_resolv_search_opt: true  # enable search option in resolv.conf
   ssl:
