--- a/ci/pod/docker-compose.yml
+++ b/ci/pod/docker-compose.yml
@@ -378,7 +378,7 @@ services:
     restart: unless-stopped
     ports:
       - "9876:9876"
-    command: bash -c "mqnamesrv; sleep 10"
+    command: sh mqnamesrv
     networks:
       rocketmq_net:
 
@@ -392,7 +392,7 @@ services:
       - "10912:10912"
     depends_on:
       - rocketmq_namesrv
-    command: bash -c "mqbroker -n rocketmq_namesrv:9876 -c ../conf/broker.conf; sleep 10"
+    command: sh mqbroker -n rocketmq_namesrv:9876 -c ../conf/broker.conf
     networks:
       rocketmq_net:
 
