--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -73,6 +73,8 @@ apisix:
                                 # radixtree_uri_with_parameter: similar to radixtree_uri but match URI with parameters. See https://github.com/api7/lua-resty-radixtree/#parameters-in-path for more details.
     ssl: radixtree_sni          # radixtree_sni: match route by SNI
 
+  # http is the default proxy mode. proxy_mode can be one of `http`, `stream`, or `http&stream`
+  proxy_mode: http
   # stream_proxy:                 # TCP/UDP L4 proxy
   #   only: true                  # Enable L4 proxy only without L7 proxy.
   #   tcp:
