--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -104,7 +104,8 @@
             "plugins/consumer-restriction",
             "plugins/csrf",
             "plugins/public-api",
-            "plugins/gm"
+            "plugins/gm",
+            "plugins/chaitin-waf"
           ]
         },
         {
