add chaitin waf to config.json
Signed-off-by: Ling Samuel (WSL) <lingsamuelgrace@gmail.com>

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -126,7 +126,8 @@
             "plugins/consumer-restriction",
             "plugins/csrf",
             "plugins/public-api",
-            "plugins/gm"
+            "plugins/gm",
+            "plugins/chaitin-waf"
           ]
         },
         {
