udpate test case and doc

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -366,6 +366,10 @@
         {
           "type": "doc",
           "id": "profile"
+        },
+        {
+          "type": "doc",
+          "id": "ssl-protocol"
         }
       ]
     },
