--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -300,6 +300,10 @@
         {
           "type": "doc",
           "id": "profile"
+        },
+        {
+          "type": "doc",
+          "id": "ssl-protocol"
         }
       ]
     },
