--- a/.github/workflows/remove-wait-for-update-label.yml
+++ b/.github/workflows/remove-wait-for-update-label.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Remove label when user responds
         uses: andymckay/labeler@master
-        if: ${{ github.event.comment.user.login == github.event.issue.user.login && contains(github.event.issue.labels.*.name, 'wait for update') }}
+        if: ${{ github.event.comment.user.login == github.event.issue.user.login && contains(github.event.issue.labels.*.name, 'wait for update') && !contains(github.event.issue.labels.*.name, 'user responded') }}
         with:
+          add-labels: 'user responded'
           remove-labels: 'wait for update'
