feat: support host level dynamic setting of tls protocol version (#9903)

--- a/docs/en/latest/config.json
+++ b/docs/en/latest/config.json
@@ -367,6 +367,10 @@
         {
           "type": "doc",
           "id": "profile"
+        },
+        {
+          "type": "doc",
+          "id": "ssl-protocol"
         }
       ]
     },
