--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -301,6 +301,10 @@
         {
           "type": "doc",
           "id": "profile"
+        },
+        {
+          "type": "doc",
+          "id": "ssl-protocol"
         }
       ]
     },
