--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -61,3 +61,16 @@ deployment:
       - name: admin
         key: edd1c9f034335f136f87ad84b625c8f1  # using fixed API token has security risk, please update it when you deploy to production environment
         role: admin
+plugins:
+    - opentelemetry
+plugin_attr:
+    opentelemetry:
+        trace_id_source: x-request-id
+        batch_span_processor:
+            max_export_batch_size: 1
+            inactive_timeout: 0.5
+        collector: 
+            address: 127.0.0.1:4318
+            request_timeout: 3
+            request_headers:
+                foo: bar
