enhance: clarify meaning of "weight" in nacos
Signed-off-by: Ashish Tiwari <ashishjaitiwari15112000@gmail.com>

--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -299,7 +299,9 @@ nginx_config:                     # Config for render the template to generate n
 #      - "http://${username}:${password}@${host1}:${port1}"
 #    prefix: "/nacos/v1/"
 #    fetch_interval: 30    # Default 30s
-#    weight: 100           # Default 100
+# `weight` is the `default_weight` that will be attached to each discovered node that
+# doesn't have a weight explicitly provided in nacos results
+#    weight: 100           # Default 100.
 #    timeout:
 #      connect: 2000       # Default 2000ms
 #      send: 2000          # Default 2000ms
