--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -139,6 +139,8 @@ apisix:
                                   # with the new key. Removing the old keys directly can render the data
                                   # unrecoverable.
 
+  server_func_addr: "http://127.0.0.1:9080" # Remote function server address
+
 nginx_config:                     # Config for render the template to generate nginx.conf
   # user: root                    # Set the execution user of the worker process. This is only
                                   # effective if the master process runs with super-user privileges.
