翻译文档support-fips-in-apisix，调整一些细节，修改config.json配置

--- a/docs/zh/latest/config.json
+++ b/docs/zh/latest/config.json
@@ -218,6 +218,10 @@
         },
         {
           "type": "doc",
+          "id": "support-fips-in-apisix"
+        },
+        {
+          "type": "doc",
           "id": "external-plugin"
         },
         {
