--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: update label when user responds
         uses: actions/github-script@v6
-        if: github.event.issue.labels && !contains(github.event.issue.labels.*.name, 'user responded')
+        if: github.event.comment.user.login == github.event.issue.user.login && github.event.issue.labels && !contains(github.event.issue.labels.*.name, 'user responded')
         with:
           script: |
             github.rest.issues.addLabels({
