--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -10,12 +10,11 @@ on:
 
 jobs:
   issue_comment:
-    if: github.event.issue && github.event.issue.pull_request  # execute for PR comments
+    if: github.event.issue && github.event.issue.pull_request && github.event.comment.user.login == github.event.issue.user.login && github.event.issue.labels && !contains(github.event.issue.labels.*.name, 'user responded')
     runs-on: ubuntu-latest
     steps:
       - name: update label when user responds
         uses: actions/github-script@v6
-        if: github.event.comment.user.login == github.event.issue.user.login && github.event.issue.labels && !contains(github.event.issue.labels.*.name, 'user responded')
         with:
           script: |
             github.rest.issues.addLabels({
@@ -26,12 +25,11 @@ jobs:
             })
 
   pull_request_review_comment:
-    if: github.event.pull_request
+    if: github.event.pull_request && github.event.comment.user.login == github.event.pull_request.user.login && github.event.pull_request.labels && !contains(github.event.pull_request.labels.*.name, 'user responded')
     runs-on: ubuntu-latest
     steps:
       - name: update label when user responds
         uses: actions/github-script@v6
-        if: github.event.comment.user.login == github.event.pull_request.user.login && github.event.pull_request.labels && !contains(github.event.pull_request.labels.*.name, 'user responded')
         with:
           script: |
             github.rest.issues.addLabels({
