--- a/.github/workflows/update-pr-labels.yml
+++ b/.github/workflows/update-pr-labels.yml
@@ -1,31 +1,13 @@
 name: Update pr labels when user responds
 permissions:
+  issues: write
   pull-requests: write
 
 on:
   issue_comment:
-    types: [created]
-  pull_request_review_comment:
-    types: [created]
 
 jobs:
   pr_commented:
-    if: github.event.issue && github.event.issue.pull_request && github.event.comment.user.login == github.event.issue.user.login && github.event.issue.labels && !contains(github.event.issue.labels.*.name, 'user responded')
-    runs-on: ubuntu-latest
-    steps:
-      - name: update label when user responds
-        uses: actions/github-script@v6
-        with:
-          script: |
-            github.rest.issues.addLabels({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              labels: ["user responded"]
-            })
-
-  pr_review_commented:
-    if: github.event.pull_request && github.event.comment.user.login == github.event.pull_request.user.login && github.event.pull_request.labels && !contains(github.event.pull_request.labels.*.name, 'user responded')
     runs-on: ubuntu-latest
     steps:
       - name: update label when user responds
