--- a/.github/workflows/update-labels.yml
+++ b/.github/workflows/update-labels.yml
@@ -32,7 +32,7 @@ jobs:
             })
 
   pr_commented:
-    if: github.event.issue && github.event.issue.pull_request && github.event.comment.user.login == github.event.issue.user.login && github.event.issue.labels && !contains(github.event.issue.labels.*.name, 'user responded')
+    if: github.event.issue && github.event.issue.pull_request && github.event.comment.user.login == github.event.issue.user.login && (contains(github.event.issue.labels.*.name, 'wait for update') || contains(github.event.issue.labels.*.name, 'discuss')) && !contains(github.event.issue.labels.*.name, 'user responded')
     runs-on: ubuntu-latest
     steps:
       - name: update label when user responds
@@ -47,7 +47,7 @@ jobs:
             })
 
   pr_review_commented:
-    if: github.event.pull_request && github.event.comment.user.login == github.event.pull_request.user.login && github.event.pull_request.labels && !contains(github.event.pull_request.labels.*.name, 'user responded')
+    if: github.event.pull_request && github.event.comment.user.login == github.event.pull_request.user.login && (contains(github.event.pull_request.labels.*.name, 'wait for update') && contains(github.event.pull_request.labels.*.name, 'discuss')) && !contains(github.event.pull_request.labels.*.name, 'user responded')
     runs-on: ubuntu-latest
     steps:
       - name: update label when user responds
