--- a/conf/config-default.yaml
+++ b/conf/config-default.yaml
@@ -109,8 +109,9 @@ apisix:
                                 # Disabled by default because it renders Perfect Forward Secrecy (FPS)
                                 # useless. See https://github.com/mozilla/server-side-tls/issues/135.
 
-    key_encrypt_salt:           # Set the encryption key for AES-128-CBC. It should be a
-      - edd1c9f0985e76a2        # hexadecimal string of length 16.
+    key_encrypt_salt:           # This field is only used to encrypt the private key of SSL.
+      - edd1c9f0985e76a2        # Set the encryption key for AES-128-CBC. It should be a
+                                # hexadecimal string of length 16.
                                 # If not set, APISIX saves the original data into etcd.
                                 # CAUTION: If you would like to update the key, add the new key as the
                                 # first item in the array and keep the older keys below the newly added
