--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -171,6 +171,10 @@ jobs:
           TEST_FILE_SUB_DIR: ${{ matrix.test_dir }}
         run: sudo -E ./ci/${{ matrix.os_name }}_runner.sh script
 
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
+
       - if: ${{ steps.cache-images.outputs.cache-hit != 'true' }}
         name: Save docker images
         run: |
