--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,11 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Setup Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.17"
+
       - name: Cache deps
         uses: actions/cache@v3
         env:
