chore: allow issues with certain label to not be marked stale

--- a/.github/workflows/close-unresponded.yml
+++ b/.github/workflows/close-unresponded.yml
@@ -35,4 +35,5 @@ jobs:
         # Issues with these labels will never be considered stale.
         only-labels: 'wait for update'
         stale-issue-label: 'no response'
+        exempt-issue-labels: "don't close"
         ascending: true
