--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -11,11 +11,13 @@ on:
     paths:
       - '**/*.md'
       - '**/link-check.yml'
+      - '.github/workflows/link-check.yml'
   pull_request:
     branches: [master, "release/**"]
     paths:
       - '**/*.md'
       - '**/link-check.yml'
+      - '.github/workflows/link-check.yml'
 
 permissions:
   contents: read
