--- a/.github/workflows/redhat-ci.yaml
+++ b/.github/workflows/redhat-ci.yaml
@@ -90,6 +90,14 @@ jobs:
         cd ..
         rm -rf $(ls -1 --ignore=apisix-build-tools --ignore=t --ignore=utils --ignore=ci --ignore=Makefile --ignore=rockspec)
 
+    - name: Start Dubbo Backend
+      run: |
+        sudo apt install -y maven
+        cd t/lib/dubbo-backend
+        mvn package
+        cd dubbo-backend-provider/target
+        java -Djava.net.preferIPv4Stack=true -jar dubbo-demo-provider.one-jar.jar > /tmp/java.log &
+
     - name: Build xDS library
       if: steps.test_env.outputs.type == 'last'
       run: |
